--- a/LecturankWeb/Views/Home/Index.cshtml
+++ b/LecturankWeb/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome here.</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to Lecturank</h1>
+    <p>The home of the most reliable reviews for Nigerian Lecturers.</p> 
 </div>
