Work in progress

--- a/LecturankWeb/Views/School/Index.cshtml
+++ b/LecturankWeb/Views/School/Index.cshtml
@@ -1,5 +1,10 @@
 ﻿@model IEnumerable<LecturankWeb.Models.School>
 
+@{
+    ViewData["Title"] = "Index";
+}
+
+
 <h2>School</h2>
 
 <form asp-controller="School" asp-action="Index" method="get">
