--- a/LecturankWeb/Views/School/Details.cshtml
+++ b/LecturankWeb/Views/School/Details.cshtml
@@ -1,17 +1,21 @@
-﻿@model LecturankWeb.Models.School
+﻿@model LecturankWeb.Models.SchoolDetailsViewModel
 
 <div class="school-profile">
     <h1>@Model.Name</h1>
-    <p>@Model.Address</p>
 
     <div class="about">
-        <h3>About</h3>
-        <p>@Model.About</p>
+        <h3>Description</h3>
+        <p>@Model.Description</p>
     </div>
 
-    <div class="background-picture">
-        <h3>Background Picture</h3>
-        <img src="@Model.BackgroundPicture" alt="Background Picture" class="img-fluid" />
+    <div class="logo-image">
+        <h3>Logo</h3>
+        <img src="@Model.LogoImageUrl" alt="Logo Image" class="img-fluid" />
+    </div>
+
+    <div class="cover-photo">
+        <h3>Cover Photo</h3>
+        <img src="@Model.CoverPhotoUrl" alt="Cover Photo" class="img-fluid" />
     </div>
 
     <div class="extra-photos">
@@ -24,7 +28,12 @@
 
     <div class="amenities">
         <h3>Amenities</h3>
-        <p>@Model.Amenities</p>
+        <ul>
+            @foreach (var amenity in Model.Amenities)
+            {
+                <li>@amenity</li>
+            }
+        </ul>
     </div>
 
     <div class="reviews">
@@ -33,8 +42,13 @@
         {
             <div class="review">
                 <p>@review.Content</p>
-                <small>Rating: @review.Rating | Date: @review.Date.ToShortDateString()</small>
+                <small>Reviewer: @review.ReviewerName | Rating: @review.Rating</small>
             </div>
         }
     </div>
+</div>
+
+<!-- Back Button -->
+<div class="mt-3">
+    <button onclick="window.history.back()" class="btn btn-primary">Back</button>
 </div>
