--- a/LecturankWeb/Views/School/Details.cshtml
+++ b/LecturankWeb/Views/School/Details.cshtml
@@ -1,7 +1,8 @@
 ﻿@model LecturankWeb.Models.SchoolDetailsViewModel
 
 <div class="school-profile">
-    <h1>@Model.Name</h1>
+    <h1 class="school-name">@Model.Name</h1>
+    <p class="school-address">@Model.Address</p>
 
     <div class="about">
         <h3>Description</h3>
