--- a/LecturankWeb/Views/Shared/_Layout.cshtml
+++ b/LecturankWeb/Views/Shared/_Layout.cshtml
@@ -48,4 +48,8 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
+<head>
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+</head>
+
 </html>
