--- a/LecturankWeb/Views/School/Index.cshtml
+++ b/LecturankWeb/Views/School/Index.cshtml
@@ -1,25 +1,12 @@
 ﻿@model IEnumerable<LecturankWeb.Models.SchoolListViewModel>
 
-<h1>Schools</h1>
+<h3 class="page-title">Schools</h3>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Address</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var school in Model)
-        {
-            <tr>
-                <td>@school.Name</td>
-                <td>@school.Address</td>
-                <td>
-                    <a asp-action="Details" asp-route-id="@school.Id">Details</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+<ul class="school-list">
+    @foreach (var school in Model)
+    {
+        <li>
+            <a class="school-link" asp-action="Details" asp-route-id="@school.Id">@school.Name</a>
+        </li>
+    }
+</ul>
