--- a/LecturankWeb/Views/Account/Register.cshtml
+++ b/LecturankWeb/Views/Account/Register.cshtml
@@ -4,6 +4,7 @@
     ViewData["Title"] = "Register";
 }
 
+
 <h1>Register</h1>
 
 <hr />
@@ -30,7 +31,10 @@
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
                 <input asp-for="Password" class="form-control" type="password" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Register" class="btn btn-primary" />
             </div>
         </form>
     </div>
